[package]
name = "LitematicaJSONParser"
version = "0.1.0"
edition = "2024"
authors = ["neriidesu"]

[dependencies]
anyhow = "1.0.102"
iced = {version= "0.14.0", features = ["image","tokio"]}
open = "5.3.5"
platform-dirs = "0.3.0"
reqwest = {version = "0.13.4", features = ["blocking", "stream"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["fs", "io-util"] }
